--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -178,7 +178,8 @@ freely combine implementations from different frameworks into a single model.
 - **Thinc: **
   [Wrapping PyTorch, TensorFlow & MXNet](https://thinc.ai/docs/usage-frameworks),
   [`Model` API](https://thinc.ai/docs/api-model)
-- **API:** [Model architectures](/api/architectures), [`Pipe`](/api/pipe)
+- **API:** [Model architectures](/api/architectures),
+  [`TrainablePipe`](/api/pipe)
 
 </Infobox>
 
@@ -428,7 +429,7 @@ The following methods, attributes and commands are new in spaCy v3.0.
 | [`Language.config`](/api/language#config)                                                                                       | The [config](/usage/training#config) used to create the current `nlp` object. An instance of [`Config`](https://thinc.ai/docs/api-config#config) and can be saved to disk and used for training. |
 | [`Language.components`](/api/language#attributes), [`Language.component_names`](/api/language#attributes)                       | All available components and component names, including disabled components that are not run as part of the pipeline.                                                                            |
 | [`Language.disabled`](/api/language#attributes)                                                                                 | Names of disabled components that are not run as part of the pipeline.                                                                                                                           |
-| [`Pipe.score`](/api/pipe#score)                                                                                                 | Method on pipeline components that returns a dictionary of evaluation scores.                                                                                                                    |
+| [`TrainablePipe.score`](/api/pipe#score)                                                                                        | Method on pipeline components that returns a dictionary of evaluation scores.                                                                                                                    |
 | [`registry`](/api/top-level#registry)                                                                                           | Function registry to map functions to string names that can be referenced in [configs](/usage/training#config).                                                                                  |
 | [`util.load_meta`](/api/top-level#util.load_meta), [`util.load_config`](/api/top-level#util.load_config)                        | Updated helpers for loading a pipeline's [`meta.json`](/api/data-formats#meta) and [`config.cfg`](/api/data-formats#config).                                                                     |
 | [`util.get_installed_models`](/api/top-level#util.get_installed_models)                                                         | Names of all pipeline packages installed in the environment.                                                                                                                                     |
@@ -483,7 +484,7 @@ format for documenting argument and return types.
   [`Morphologizer`](/api/morphologizer),
   [`AttributeRuler`](/api/attributeruler),
   [`SentenceRecognizer`](/api/sentencerecognizer),
-  [`DependencyMatcher`](/api/dependencymatcher), [`Pipe`](/api/pipe),
+  [`DependencyMatcher`](/api/dependencymatcher), [`TrainablePipe`](/api/pipe),
   [`Corpus`](/api/corpus)
 
 </Infobox>
@@ -522,7 +523,7 @@ Note that spaCy v3.0 now requires **Python 3.6+**.
   [`@Language.factory`](/api/language#factory) decorator.
 - The [`Language.update`](/api/language#update),
   [`Language.evaluate`](/api/language#evaluate) and
-  [`Pipe.update`](/api/pipe#update) methods now all take batches of
+  [`TrainablePipe.update`](/api/pipe#update) methods now all take batches of
   [`Example`](/api/example) objects instead of `Doc` and `GoldParse` objects, or
   raw text and a dictionary of annotations.
 - The `begin_training` methods have been renamed to `initialize` and now take a
@@ -947,7 +948,7 @@ annotations = {"entities": [(0, 15, "PERSON"), (30, 38, "ORG")]}
 
 The [`Language.update`](/api/language#update),
 [`Language.evaluate`](/api/language#evaluate) and
-[`Pipe.update`](/api/pipe#update) methods now all take batches of
+[`TrainablePipe.update`](/api/pipe#update) methods now all take batches of
 [`Example`](/api/example) objects instead of `Doc` and `GoldParse` objects, or
 raw text and a dictionary of annotations.
 
@@ -967,12 +968,13 @@ for i in range(20):
         nlp.update(examples)
 ```
 
-`Language.begin_training` and `Pipe.begin_training` have been renamed to
-[`Language.initialize`](/api/language#initialize) and
-[`Pipe.initialize`](/api/pipe#initialize), and the methods now take a function
-that returns a sequence of `Example` objects to initialize the model instead of
-a list of tuples. The data examples are used to **initialize the models** of
-trainable pipeline components, which includes validating the network,
+`Language.begin_training` and `TrainablePipe.begin_training` have been renamed
+to [`Language.initialize`](/api/language#initialize) and
+[`TrainablePipe.initialize`](/api/pipe#initialize), and the methods now take a
+function that returns a sequence of `Example` objects to initialize the model
+instead of a list of tuples. The data examples are used to **initialize the
+models** of trainable pipeline components, which includes validating the
+network,
 [inferring missing shapes](https://thinc.ai/docs/usage-models#validation) and
 setting up the label scheme.
 
