Update docs [ci skip]

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -285,6 +285,7 @@ add to your pipeline and customize for your use case:
 | [`Lemmatizer`](/api/lemmatizer)                 | Standalone component for rule-based and lookup lemmatization.                                                                                                                                                           |
 | [`AttributeRuler`](/api/attributeruler)         | Component for setting token attributes using match patterns.                                                                                                                                                            |
 | [`Transformer`](/api/transformer)               | Component for using [transformer models](/usage/embeddings-transformers) in your pipeline, accessing outputs and aligning tokens. Provided via [`spacy-transformers`](https://github.com/explosion/spacy-transformers). |
+| [`TrainablePipe`](/api/pipe)                    | Base class for trainable pipeline components.                                                                                                                                                                           |
 
 <Infobox title="Details & Documentation" emoji="📖" list>
 
@@ -396,8 +397,8 @@ type-check model definitions.
 For data validation, spaCy v3.0 adopts
 [`pydantic`](https://github.com/samuelcolvin/pydantic). It also powers the data
 validation of Thinc's [config system](https://thinc.ai/docs/usage-config), which
-lets you register **custom functions with typed arguments**, reference them
-in your config and see validation errors if the argument values don't match.
+lets you register **custom functions with typed arguments**, reference them in
+your config and see validation errors if the argument values don't match.
 
 <Infobox title="Details & Documentation" emoji="📖" list>
 
