Tidy up and add docs

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -501,7 +501,7 @@ format for documenting argument and return types.
   [`AttributeRuler`](/api/attributeruler),
   [`SentenceRecognizer`](/api/sentencerecognizer),
   [`DependencyMatcher`](/api/dependencymatcher), [`TrainablePipe`](/api/pipe),
-  [`Corpus`](/api/corpus)
+  [`Corpus`](/api/corpus), [`SpanGroup`](/api/spangroup),
 
 </Infobox>
 
