--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -10,6 +10,18 @@ menu:
 
 ## Summary {#summary hidden="true"}
 
+<Infobox title="New: Commercial migration support for your spaCy pipelines" variant="warning" emoji="📣">
+
+Want to make the transition from spaCy v2 to spaCy v3 as smooth as possible for
+you and your organization? We're now offering commercial **migration support**
+for your spaCy pipelines! We've put a lot of work into making it easy to upgrade
+your existing code and training workflows – but custom projects may always need
+some custom work, especially when it comes to taking advantage of the new
+capabilities.
+[**Details & application &rarr;**](https://form.typeform.com/to/vMs2zSjM)
+
+</Infobox>
+
 <Grid cols={2} gutterBottom={false}>
 
 <div>
