Update website for v3 launch

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -67,6 +67,16 @@ improvements**. The [API docs](/api) include additional deprecation notes. New
 methods and functions that were introduced in this version are marked with the
 tag <Tag variant="new">3</Tag>.
 
+<YouTube id="9k_EfV7Cns0"></YouTube>
+
+<Grid cols={2} gutterBottom={false} narrow>
+
+<YouTube id="BWhh3r6W-qE"></YouTube>
+
+<YouTube id="8HL-Ap5_Axo"></YouTube>
+
+</Grid>
+
 ### Transformer-based pipelines {#features-transformers}
 
 > #### Example
