Support building wheel in spacy package

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -1065,7 +1065,8 @@ setting up the label scheme.
 The [`spacy package`](/api/cli#package) command now automatically builds the
 installable `.tar.gz` sdist of the Python package, so you don't have to run this
 step manually anymore. You can disable the behavior by setting the `--no-sdist`
-flag.
+flag. You can now also specify `--wheel` to build a binary `.whl` file instead,
+which will install more efficiently.
 
 ```diff
 python -m spacy package ./output ./packages
