Update and use unified --build option

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -1064,9 +1064,10 @@ setting up the label scheme.
 
 The [`spacy package`](/api/cli#package) command now automatically builds the
 installable `.tar.gz` sdist of the Python package, so you don't have to run this
-step manually anymore. You can disable the behavior by setting the `--no-sdist`
-flag. You can now also specify `--wheel` to build a binary `.whl` file instead,
-which will install more efficiently.
+step manually anymore. To disable the behavior, you can set `--build none`. You
+can also choose to build a binary wheel (which installs more efficiently) by
+setting `--build wheel`, or to build both the sdist and wheel by setting
+`--build sdist,wheel`.
 
 ```diff
 python -m spacy package ./output ./packages
