Update docs [ci skip]

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -456,6 +456,7 @@ The following methods, attributes and commands are new in spaCy v3.0.
 | ------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | [`Token.lex`](/api/token#attributes)                                                                                            | Access a token's [`Lexeme`](/api/lexeme).                                                                                                                                                        |
 | [`Token.morph`](/api/token#attributes)                                                                                          | Access a token's morphological analysis.                                                                                                                                                         |
+| [`Doc.spans`](/api/doc#spans)                                                                                                   | Named span groups to store and access collections of potentially overlapping spans. Uses the new [`SpanGroup`](/api/spangroup) data structure.                                                   |
 | [`Doc.has_annotation`](/api/doc#has_annotation)                                                                                 | Check whether a doc has annotation on a token attribute.                                                                                                                                         |
 | [`Language.select_pipes`](/api/language#select_pipes)                                                                           | Context manager for enabling or disabling specific pipeline components for a block.                                                                                                              |
 | [`Language.disable_pipe`](/api/language#disable_pipe), [`Language.enable_pipe`](/api/language#enable_pipe)                      | Disable or enable a loaded pipeline component (but don't remove it).                                                                                                                             |
@@ -584,8 +585,8 @@ Note that spaCy v3.0 now requires **Python 3.6+**.
   rule-based lemmas. You can now add it to your pipeline explicitly and set its
   mode on initialization.
 - Various keyword arguments across functions and methods are now explicitly
-  declared as _keyword-only_ arguments. Those arguments are documented
-  accordingly across the API reference.
+  declared as **keyword-only** arguments. Those arguments are documented
+  accordingly across the API reference using the <Tag>keyword-only</Tag> tag.
 
 ### Removed or renamed API {#incompat-removed}
 
