Fix code branch for v2.x site [ci skip]

--- a/website/docs/usage/v2-1.md
+++ b/website/docs/usage/v2-1.md
@@ -180,7 +180,7 @@ entirely **in Markdown**, without having to compromise on easy-to-use custom UI
 components. We're hoping that the Markdown source will make it even easier to
 contribute to the documentation. For more details, check out the
 [styleguide](/styleguide) and
-[source](https://github.com/explosion/spaCy/tree/master/website). While
+[source](https://github.com/explosion/spacy/tree/v2.x/website). While
 converting the pages to Markdown, we've also fixed a bunch of typos, improved
 the existing pages and added some new content:
 
