--- a/website/docs/usage/v2.md
+++ b/website/docs/usage/v2.md
@@ -306,7 +306,7 @@ lookup-based lemmatization – and **many new languages**!
 <Infobox>
 
 **API:** [`Language`](/api/language) **Code:**
-[`spacy/lang`](https://github.com/explosion/spaCy/tree/master/spacy/lang)
+[`spacy/lang`](https://github.com/explosion/spacy/tree/v2.x/spacy/lang)
 **Usage:** [Adding languages](/usage/adding-languages)
 
 </Infobox>
