--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -1179,4 +1179,4 @@ In Jupyter notebooks, run [`prefer_gpu`](/api/top-level#spacy.prefer_gpu),
 Due to a bug related to `contextvars` (see the [bug
 report](https://github.com/ipython/ipython/issues/11565)), the GPU settings may
 not be preserved correctly across cells, resulting in models being loaded on
-on the wrong device or only partially on GPU.
+the wrong device or only partially on GPU.
