--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -10,6 +10,11 @@ menu:
 
 ## Summary {#summary hidden="true"}
 
+> #### 📖 Looking for the old docs?
+>
+> To help you make the transition from v2.x to v3.0, we've uploaded the old
+> website to [**v2.spacy.io**](https://v2.spacy.io/docs).
+
 <Infobox title="New: Commercial migration support for your spaCy pipelines" variant="warning" emoji="📣">
 
 Want to make the transition from spaCy v2 to spaCy v3 as smooth as possible for
