remove separate documentation page for multilabel_textcategorizer

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -315,15 +315,15 @@ add to your pipeline and customize for your use case:
 > nlp.add_pipe("lemmatizer")
 > ```
 
-| Name                                                             | Description                                                                                                                                                                                                             |
-| ---------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [`SentenceRecognizer`](/api/sentencerecognizer)                  | Trainable component for sentence segmentation.                                                                                                                                                                          |
-| [`Morphologizer`](/api/morphologizer)                            | Trainable component to predict morphological features.                                                                                                                                                                  |
-| [`Lemmatizer`](/api/lemmatizer)                                  | Standalone component for rule-based and lookup lemmatization.                                                                                                                                                           |
-| [`AttributeRuler`](/api/attributeruler)                          | Component for setting token attributes using match patterns.                                                                                                                                                            |
-| [`Transformer`](/api/transformer)                                | Component for using [transformer models](/usage/embeddings-transformers) in your pipeline, accessing outputs and aligning tokens. Provided via [`spacy-transformers`](https://github.com/explosion/spacy-transformers). |
-| [`TrainablePipe`](/api/pipe)                                     | Base class for trainable pipeline components.                                                                                                                                                                           |
-| [`Multi-label TextCategorizer`](/api/multilabel_textcategorizer) | Trainable component for multi-label text classification.                                                                                                                                                                |
+| Name                                                  | Description                                                                                                                                                                                                             |
+| ----------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [`SentenceRecognizer`](/api/sentencerecognizer)       | Trainable component for sentence segmentation.                                                                                                                                                                          |
+| [`Morphologizer`](/api/morphologizer)                 | Trainable component to predict morphological features.                                                                                                                                                                  |
+| [`Lemmatizer`](/api/lemmatizer)                       | Standalone component for rule-based and lookup lemmatization.                                                                                                                                                           |
+| [`AttributeRuler`](/api/attributeruler)               | Component for setting token attributes using match patterns.                                                                                                                                                            |
+| [`Transformer`](/api/transformer)                     | Component for using [transformer models](/usage/embeddings-transformers) in your pipeline, accessing outputs and aligning tokens. Provided via [`spacy-transformers`](https://github.com/explosion/spacy-transformers). |
+| [`TrainablePipe`](/api/pipe)                          | Base class for trainable pipeline components.                                                                                                                                                                           |
+| [`Multi-label TextCategorizer`](/api/textcategorizer) | Trainable component for multi-label text classification.                                                                                                                                                                |
 
 <Infobox title="Details & Documentation" emoji="📖" list>
 
@@ -591,7 +591,7 @@ Note that spaCy v3.0 now requires **Python 3.6+**.
 - The `textcat` pipeline component is now only applicable for classification of
   mutually exclusives classes - i.e. one predicted class per input sentence or
   document. To perform multi-label classification, use the new
-  [`textcat_multilabel` component](/api/multilabel_textcategorizer) instead.
+  `textcat_multilabel` component instead.
 
 ### Removed or renamed API {#incompat-removed}
 
