--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -1058,7 +1058,7 @@ nlp.initialize(lambda: examples)
 for i in range(20):
     random.shuffle(examples)
     for batch in minibatch(examples, size=8):
-        nlp.update(examples)
+        nlp.update(batch)
 ```
 
 `Language.begin_training` and `TrainablePipe.begin_training` have been renamed
