Documentation, images, and top-level import

--- a/website/docs/usage/v3.md
+++ b/website/docs/usage/v3.md
@@ -254,7 +254,8 @@ data version control, [Prodigy](/usage/projects#prodigy) for creating labelled
 data, [Streamlit](/usage/projects#streamlit) for building interactive apps,
 [FastAPI](/usage/projects#fastapi) for serving models in production,
 [Ray](/usage/projects#ray) for parallel training,
-[Weights & Biases](/usage/projects#wandb) for experiment tracking, and more!
+[Weights & Biases](/usage/projects#wandb) or [Comet.ML](/usage/projects#comet)
+for experiment tracking, and more!
 
 <Infobox title="Details & Documentation" emoji="📖" list>
 
