Update details and add example [ci skip]

--- a/website/docs/usage/v3-1.md
+++ b/website/docs/usage/v3-1.md
@@ -72,11 +72,27 @@ annotations can be added via the [`Doc.spans`](/api/doc#spans) in the training
 data under the key defined as
 [`incorrect_spans_key`](/api/entityrecognizer#init) in the component config.
 
+```python
+train_doc = nlp.make_doc("Barack Obama was born in Hawaii.")
+# The doc.spans key can be defined in the config
+train_doc.spans["incorrect_spans"] = [
+  Span(doc, 0, 2, label="ORG"),
+  Span(doc, 5, 6, label="PRODUCT")
+]
+```
+
 <!-- TODO: more details and/or example project? -->
 
 ### New pipeline packages for Catalan and Danish {#pipeline-packages}
 
-<!-- TODO: intro and update with final numbers -->
+spaCy v3.1 adds 5 new pipeline packages, including a new core family for Catalan
+and a new transformer-based pipeline for Danish using the
+[`danish-bert-botxo`](http://huggingface.co/Maltehb/danish-bert-botxo) weights.
+See the [models directory](/models) for an overview of all available trained
+pipelines and the [training guide](/usage/training) for details on how to train
+your own.
+
+<!-- TODO: thank contributors and update with final numbers -->
 
 | Package                                           | Language | Tagger | Parser |  NER |
 | ------------------------------------------------- | -------- | -----: | -----: | ---: |
